--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,22 @@
-body {
-  margin: 0 auto;
-  font-family: sans-serif;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
+.clearfix:after {
+  content:"";
+  display:block;
+  clear:both;
+}
 
-.pages {
-  height: 900px;
+body {
+  margin: 0 auto;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+p {
+  line-height: 1.75;
 }
 
 
@@ -42,17 +53,81 @@ body {
 /******Create your own bowl - STEPS******/
 #bowl-creation h2 {
   text-align: center; 
+  color: #3E3919;
   background-color: #ACA14F;
   padding: 20px;
-  color: white;
 }
 
-#bowl-creation h2 span {
-  color: #3E3919;
+#bowl-creation .highlight {
+  color: #fff;
 }
 
 .steps img {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
+  width: 400px;
+  height: 400px;
 }
+
+
+/******       EVENTS       ******/
+#events {
+  margin-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  background-color: #e6d4ac;
+}
+
+.wrapper {
+  margin: 0 auto;
+}
+
+#events h3 {
+  margin-top: 0;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.fb-events {
+  width: 800px;
+  height: 650px;
+  margin: 50px auto 0;
+  background-color: #888;
+}
+
+
+/******       LOCATION       ******/
+#location {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+}
+
+#location h3 {
+  margin-top: 0;
+  font-size: 2rem;
+}
+
+.loc-left,
+.loc-right {
+  width: 50%;
+  height: 500px;
+  -ms-align-items: stretch;
+  align-items: stretch;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  -o-flex: 1;
+  flex: 1;
+}
+
+.loc-left {
+  padding: 50px 50px 0;
+}
+
+.loc-right {
+  background-color: steelblue;
+}
+
+
+
